feat: record message log with sqlite
